# KFUPMRestaurant

./: .gitignore  README.md  requirements.txt
experiments/v3_trifoodnet_research_snapshot/: .gitattributes  .gitignore  ARCHITECTURE.md  DATA_PIPELINE.md  ENV_SNAPSHOT.txt  EVAL_GUIDE.md  EXPERIMENTS_INDEX.md  HANDOFF.md  MANIFEST.md  README.md  RESUME_GUIDE.md  SECRETS.md  VALIDATION_REPORT.md  benchmark_runtime.py  check_trainable.py  config_loader.py  config_validation.py  data_correctness_report.json  dataset_integration.py  dataset_v3_adapter.py  eval_harness.py  experiment_logging.py  experiment_report.py  master_config.yaml  metrics.py  pictsure_baseline.py  pictsure_official.py  pipeline.py  post_training_artifacts.py  program.md  pyproject.toml  requirements.txt  restore_best_checkpoint.ps1  reupload_validation_report.json  review-findings.md  run_isolated_inference.py  run_official_pictsure.py  stage2_sam.py  stage3_icl.py  test_pictsure_alignment.py  (+8 more)
experiments/v3_trifoodnet_research_snapshot/docs/: DATASET.md  FACULTY_REVIEW_GUIDE.md  README.md  STAGE1_KCFD.md  STAGE1_REMOTE_RUN.md
experiments/v3_trifoodnet_research_snapshot/scripts/: build_report_pdf.py  compare_runs.py  registry_append.py  smoke_phase3.py
experiments/v3_trifoodnet_research_snapshot/stage1_kcfd/: bbox_audit.py  config.py  dataset.py  loss.py  probe_batch_size.py  qwen_io.py  schema.py  train.py  visualize.py
experiments/v3_trifoodnet_research_snapshot/tests/: test_dataset.py  test_pipeline_contracts.py  test_stage1_kcfd_bbox_audit.py  test_stage1_kcfd_dataset.py  (+7 more)
paper/: paper.aux  (+2 more)
(+3348 files in other folders)
